mengubah hero index

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   font-optical-sizing: auto;
   font-style: normal;
   color: var(--secondary);
+  cursor: none;
 }
 img {
   width: 100%;
@@ -27,9 +28,31 @@ h1 {
 .overflow{
   overflow: hidden;
 }
-
-/* Intro */
-
+/* Cursor */
+.cursor{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(20px);
+  border-radius: 100%;
+  pointer-events: none;
+  font-size: 40px;
+  z-index: 99;
+  opacity: 0;
+}
+.cursor i{
+  color: #fff;
+}
+.cursor p{
+  font-size: 12px;
+  color: #f0e9e9;
+}
 /* Nav */
 nav {
   position:fixed;
