--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 html,
-body {
-  width: 100%;
-  min-height: 100svh;
-  background: var(--secondary);
-  transition: background-color 1s;
+body{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  color: var(--secondary);
   cursor: none;
 }
-img {
+img{
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+h1,
+p,
+a{
+  color: #fff;
+  text-decoration: none;
 }
 a,
 p,
@@ -22,13 +34,14 @@ span {
   text-transform: uppercase;
   font-weight: 500;
 }
-h1 {
-  font-weight: 800;
-}
 .overflow{
   overflow: hidden;
 }
-/* Cursor */
+.container{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
 .cursor{
   position: absolute;
   top: 0;
@@ -42,17 +55,150 @@ h1 {
   backdrop-filter: blur(20px);
   border-radius: 100%;
   pointer-events: none;
-  font-size: 40px;
-  z-index: 99;
-  opacity: 0;
-}
-.cursor i{
-  color: #fff;
+  z-index: 2;
 }
 .cursor p{
   font-size: 12px;
-  color: #f0e9e9;
+  text-transform: uppercase;
 }
+.story-img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+.img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.story-content{
+  position: absolute;
+  padding: 2em;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12em;
+}
+.row:nth-child(1){
+  display: flex;
+  flex-direction: column;
+  gap: .5em;
+  position: absolute;
+  bottom: 7.7em;
+}
+.indices{
+  width: 25%;
+  height: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: .25em;
+}
+.index{
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background: rgba(255, 255, 255, 0.25);
+}
+.index-highlight{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background: #fff;
+  transform: scaleX(100%);
+}
+.profile{
+  width: 100vw;
+  height: 30px;
+  display: flex;
+  gap: .5em;
+}
+.profile-icon{
+  position: relative;
+  width: 10%;
+  height: 6.6em;
+  overflow: hidden;
+}
+.profile-name{
+  position: relative;
+  width: 100%;
+  height: 20px;
+  margin-top: .65em;
+  margin-left: .75em;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  /* display: none; */
+}
+.profile-name p{
+  font-size: 16px;
+}
+.row:nth-child(2){
+  width: 15em;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 3em;
+  left: 11em;
+  background: #fff;
+  padding: 1em;
+  cursor: pointer;
+}
+.title-row{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 20px;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+.title-row h1{
+  color: #000;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: -.01em;
+  font-weight: 500;
+}
+.title-row:nth-child(2),
+.title-row:nth-child(3){
+  height: 16px;
+}
+.title-row:nth-child(2) h1,
+.title-row:nth-child(3) h1{
+  font-size: 13px;
+  line-height: 15px;
+  font-weight: 400;
+}
+.link{
+  position: relative;
+  width: max-content;
+  /* left: 9em; */
+}
+.link a{
+  font-size: 11px;
+  text-transform: none;
+  color: #000;
+}
+.link::after{
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #000;
+}
+.title-row h1,
+.profile-name p{
+  position: absolute;
+  top: 0;
+}
+
 /* Nav */
 nav {
   position:fixed;
@@ -60,7 +206,7 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 2.5em;
+  padding: 1em;
   z-index: 100;
   mix-blend-mode: difference;
 }
@@ -93,192 +239,6 @@ nav p {
   background: #fff;
 }
 
-/* Hero */
-.slider {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
-.slider-images {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
-}
-.img {
-  position: absolute;
-  width: 100vw;
-  height: 100%;
-}
-.slider-counter {
-  position: absolute;
-  top: 45%;
-  left: 67%;
-  transform: translate(-50%, -50%);
-  height: 24px;
-  display: flex;
-  gap: 0.5em;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-}
-.slider-counter > div {
-  flex: 1;
-}
-.slider-counter p {
-  line-height: 20px;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 600;
-}
-.counter {
-  position: relative;
-  top: 0.5px;
-  will-change: transform;
-}
-.slider-title {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 64px;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-}
-.slider-title-wrapper {
-  position: relative;
-  width: 100%;
-  top: 0px;
-  text-align: center;
-  will-change: transform;
-}
-.slider-title-wrapper > div{
-  display: flex;
-  gap: 1.75em;
-  width: 100%;
-  justify-content: center;
-}
-.slider-title-wrapper h1 {
-  font-size: 60px;
-  line-height: 60px;
-  color: #f0e9e9;
-  letter-spacing: -.01em;
-  font-weight: 600;
-}
-.slider-indicators {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 75%;
-  display: flex;
-  justify-content: space-between;
-  opacity: 0;
-}
-.slider-indicators p {
-  position: relative;
-  font-size: 40px;
-  font-weight: 800;
-  font-weight: 200;
-  will-change: transform;
-  color: #fff;
-}
-.slider-preview {
-  position: absolute;
-  bottom: 2.5em;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 35%;
-  height: 50px;
-  display: flex;
-  gap: 2em;
-}
-.preview-wrapper{
-  display: flex;
-  gap: 2em;
-  width: 50%;
-  overflow: hidden;
-}
-.preview {
-  position: relative;
-  flex: 1;
-  cursor: pointer;
-  transition: 700ms cubic-bezier(0.075, 0.82, 0.165, 1);
-  transform-origin: bottom;
-  width: 15em;
-  height: 6em;
-  overflow: hidden;
-}
-.preview::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  transition: 0.3s ease-in-out;
-}
-.preview.active::after {
-  background: rgba(0, 0, 0, 0);
-}
-
-/* Footer */
-.footer {
-  height: 70vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-.footer-top {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 11em 0 2em;
-}
-.footer-left {
-  width: 30vw;
-}
-.footer-right {
-  width: 20%;
-  display: flex;
-  justify-content: space-between;
-}
-.contact {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-}
-.contact span {
-  text-decoration: underline;
-  cursor: pointer;
-}
-.pages {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5em;
-}
-.pages a {
-  color: var(--secondary);
-  text-decoration: underline;
-}
-.footer-bottom {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-.footer-bottom h1 {
-  font-size: 16vw;
-}
-.footer-bottom h1:nth-child(2),
-.footer-bottom h1:nth-child(3) {
-  display: none;
-}
-
 /* Menu */
 .info {
   height: 100svh;
@@ -296,14 +256,15 @@ nav p {
 }
 .info-nav{
   position: absolute;
-  top: 2.5em;
-  right: 2.5em;
+  top: 1em;
+  right: 1em;
   overflow: hidden;
 }
 .info-nav p{
   font-size: 14px;
   cursor: pointer;
   text-transform: none;
+  color: #000;
 }
 .info-desc{
   position: absolute;
@@ -312,7 +273,7 @@ nav p {
   transform: translate(-50%, -50%);
   display: flex;
   gap: 12vw;
-  width: 50vw;
+  width: 52vw;
 }
 .info-desc p,
 .info-desc a{
@@ -356,59 +317,53 @@ nav p {
   background: #000;
 }
 
-/* Responsive */
+
 @media (max-width: 900px) {
-  .slider-indicators{
-    width: 90%;
+  html,
+  body{
+    cursor: default;
   }
-  .slider-preview{
-    width: 90%;
-    bottom: 5em;
+  .story-content{
+    width: 100%;
+    padding: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
-  .slider-title-wrapper p{
-    font-size: 30px;
+  .cursor{
+    display: none;
+  }
+  .profile-name{
+    display: none;
+  }
+  .profile{
+    width: 50vw;
+    padding-left: 1em;
+  }
+  .row:nth-child(2){
+    width: 12em;
   }
 }
 
 @media (max-width: 530px) {
-  /* Nav */
-  nav {
-    padding: 6em;
+  nav{
+    padding: 1.5em 1em;
   }
-  nav p {
-    font-size: 13px;
+  .row:nth-child(1){
+    bottom: 5.7em;
   }
-
-  /* Hero */
-  .slider-title-wrapper h1{
-    font-size: 40px;
-    line-height: 60px;
+  .row:nth-child(2){
+    width: 12em;
+    bottom: 1em;
+    left: 11em;
   }
-  .slider-title-wrapper > div{
-    gap: 5em;
-  }
-  .slider-counter {
-    left: 50%;
-    top: 95%;
-  }
-  .slider-counter p{
-    font-size: 14px;
-  }
-  .slider-preview{
-    height: 150px;
-    bottom: 6em;
-    width: 74%;
-    display: flex;
-    flex-direction: column;
-    gap: 10em;
-    display: none;
-  }
-  .preview-wrapper{
-    gap: 7vw;
+  .indices{
+    position: fixed;
+    top: .5em;
     width: 100%;
   }
-  .preview{
-    height: 6vh;
+  .profile-icon{
+    width: 75%;
   }
 
   /* Info */
