--- a/css/clients.css
+++ b/css/clients.css
@@ -33,15 +33,38 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 2.5em;
+  padding: 3.5em;
   z-index: 100;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
 }
 nav span {
-  font-size: 14px;
-  color: #fff;
+  font-size: 30px;
+  color: #000000;
+  text-transform: none;
+  font-weight: 500;
+}
+.copyright span{
+  line-height: 16px;
+}
+.nav-info span{
+  font-size: 16px;
+  color: #000000;
+  background-color: gainsboro;
   text-transform: none;
   font-weight: 400;
+  padding: .2em .5em;
+  border-radius: 3px;
+}
+.nav-info-wrapper{
+  display: flex;
+  gap: 1.5em;
+}
+.nav-info-wrap{
+  display: flex;
+  gap: 1.5em;
+}
+.nav-menu{
+  display: none;
 }
 .open-btn {
   position: relative;
@@ -97,12 +120,12 @@ nav span {
 }
 .client-desc {
   position: absolute;
-  bottom: 2.5em;
-  right: 2.5em;
+  bottom: 3.5em;
+  left: 3.5em;
   z-index: 1;
   background: #fff;
-  padding: 2em;
-  width: 16vw;
+  padding: 2.5em 4em;
+  width: 18vw;
 }
 .client-desc p {
   color: #000000;
@@ -113,7 +136,7 @@ nav span {
 }
 .client-desc p:nth-child(1) {
   font-size: 30px;
-  line-height: 32px;
+  line-height: 1.4;
 }
 .client-video {
   position: absolute;
@@ -188,7 +211,7 @@ nav span {
   height: 700px;
 }
 #scroll-6 {
-  height: 974px;
+  height: 620px;
 }
 #scroll-7 {
   height: 600px;
@@ -230,7 +253,7 @@ nav span {
 }
 .whitespace {
   width: 100%;
-  height: 300px;
+  height: 400px;
 }
 
 /* Footer */
@@ -385,10 +408,23 @@ nav span {
 @media (max-width: 530px) {
   /* Nav */
   nav {
-    padding: 6em;
+    padding: 9em;
   }
-  nav p {
-    font-size: 13px;
+  .copyright span{
+    line-height: 1;
+  }
+  .nav-menu{
+    display: flex;
+  }
+  .nav-info-wrapper{
+    /* flex-direction: column; */
+    gap: 3.5em;
+    align-items: flex-end;
+  }
+  .nav-info-wrap{
+    gap: 3.5em;
+    align-items: flex-end;
+    display: none;
   }
 
   /* Hero */
@@ -404,10 +440,10 @@ nav span {
     height: 100vh;
   }
   .client-desc {
-    width: 49vw;
-    padding: 6em;
-    bottom: 6em;
-    right: 6em;
+    width: 50vw;
+    padding: 6em 8em;
+    bottom: 9em;
+    right: 9em;
   }
   .client-desc p {
     font-size: 11px;
@@ -458,6 +494,9 @@ nav span {
   .img-container p {
     padding: 2rem;
     font-size: 11px;
+  }
+  .whitespace{
+    height: 300px;
   }
 
   /* Footer */
